tests/integration/snapshots/integration__conformance__n_object_comma_instead_of_colon.json.snap
---
source: tests/integration/conformance.rs
expression: output
---
command: "jjp"
status: 1
success: false
stdout ---
{"x", null}
stderr ---
error: expected colon after key, found `,`
 --> stdin:1:5
  |
1 | {"x", null}
  |  ---^
  |  |
  |  expected due to `"x"`
  |
help: insert colon and placeholder value
  |
1 | {"x": "ğŸŸğŸ›¹", null}
  |     ++++++++
